--- a/biostatistics.html
+++ b/biostatistics.html
@@ -143,7 +143,7 @@ files, writing application programs within a statistical software, analyzing dat
 <p><span class="badge badge-light">Madrid, Spain</span></p>
 <p>Posted on:: 2019-10-05</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://tfscareers.workable.com/j/13CE70BC84'>TFS - Jobs: Senior Biostatistician - Apply online</a></h5> 
+<h5><a href='https://tfscareers.workable.com/j/13CE70BC84'>TFS - Jobs: Senior Biostatistician - Apply online</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-03</p>
 <hr/>
@@ -163,7 +163,7 @@ files, writing application programs within a statistical software, analyzing dat
 <p><span class="badge badge-light">North Carolina</span></p>
 <p>Posted on:: 2019-10-03</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/premier-research/job/oQzfbfwz'>Premier Research Careers - Biostatistical Programmer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/premier-research/job/oQzfbfwz'>Premier Research Careers - Biostatistical Programmer</a></h5> 
 <p><span class="badge badge-light">North Carolina</span></p>
 <p>Posted on: 2019-10-02</p>
 <hr/>
@@ -227,7 +227,7 @@ files, writing application programs within a statistical software, analyzing dat
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-09-15</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/licor/jobs/1837383'>Job Application for Sales Consultant, Bio (United States, Atlanta based) at LI-COR</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/licor/jobs/1837383'>Job Application for Sales Consultant, Bio (United States, Atlanta based) at LI-COR</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-09-15</p>
 <hr/>
@@ -245,7 +245,7 @@ files, writing application programs within a statistical software, analyzing dat
 <p><span class="badge badge-light">Kiev, Ukraine</span></p>
 <p>Posted on: 2019-09-13</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/premier-research/job/o4rAafwZ'>Premier Research Careers - Senior Biostatistician</a></h5> 
+<h5><a href='http://jobs.jobvite.com/premier-research/job/o4rAafwZ'>Premier Research Careers - Senior Biostatistician</a></h5> 
 <p><span class="badge badge-light">Sofia, Bulgaria</span></p>
 <p>Posted on: 2019-09-13</p>
 <hr/>
@@ -257,7 +257,7 @@ files, writing application programs within a statistical software, analyzing dat
 <p><span class="badge badge-light">Darmstadt, Germany</span></p>
 <p>Posted on: 2019-09-13</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/premier-research/job/oOrAafwJ'>Premier Research Careers - Senior Biostatistician</a></h5> 
+<h5><a href='http://jobs.jobvite.com/premier-research/job/oOrAafwJ'>Premier Research Careers - Senior Biostatistician</a></h5> 
 <p><span class="badge badge-light">Milan Italy</span></p>
 <p>Posted on: 2019-09-13</p>
 <hr/>
@@ -273,7 +273,7 @@ files, writing application programs within a statistical software, analyzing dat
 <p><span class="badge badge-light">Sofia, Bulgaria</span></p>
 <p>Posted on: 2019-09-07</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/premier-research/job/oHrAafwC'>Premier Research Careers - Senior Biostatistician</a></h5> 
+<h5><a href='https://jobs.jobvite.com/premier-research/job/oHrAafwC'>Premier Research Careers - Senior Biostatistician</a></h5> 
 <p><span class="badge badge-light">Wokingham, United Kingdom</span></p>
 <p>Posted on: 2019-09-07</p>
 <hr/>
